[gd_scene load_steps=11 format=2]

[ext_resource path="res://levels/level_template/Node2D.gd" type="Script" id=1]
[ext_resource path="res://levels/level_template/TileSetBackup.tres" type="TileSet" id=2]
[ext_resource path="res://levels/level_design_elements/PillarOfIce.tscn" type="PackedScene" id=3]
[ext_resource path="res://other/Target.tscn" type="PackedScene" id=4]
[ext_resource path="res://player/user_interface/UserInterface.tscn" type="PackedScene" id=5]
[ext_resource path="res://levels/pause_scene/PauseAndEndLevelScene.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/YeonSung-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://other/collectibles/Fish.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 7 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="MainElements" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 196620, 1, 0, 196621, 1, 1, 196622, 1, 1, 196623, 1, 1, 196624, 1, 1, 196625, 1, 1, 196626, 1, 1, 196627, 1, 1, 196628, 1, 1, 196629, 1, 2, 262156, 1, 65536, 262157, 1, 65537, 262158, 1, 65537, 262159, 1, 65537, 262160, 1, 65537, 262161, 1, 65537, 262162, 1, 65537, 262163, 1, 65537, 262164, 1, 65537, 262165, 1, 65538, 327692, 1, 65536, 327693, 1, 65537, 327694, 1, 65537, 327695, 1, 65537, 327696, 1, 65537, 327697, 1, 65537, 327698, 1, 65537, 327699, 1, 65537, 327700, 1, 65537, 327701, 1, 65538, 393228, 1, 65536, 393229, 1, 65537, 393230, 1, 65537, 393231, 1, 65537, 393232, 1, 65537, 393233, 1, 65537, 393234, 1, 65537, 393235, 1, 65537, 393236, 1, 65537, 393237, 1, 65538, 458764, 1, 65536, 458765, 1, 65537, 458766, 1, 65537, 458767, 1, 65537, 458768, 1, 65537, 458769, 1, 65537, 458770, 1, 65537, 458771, 1, 65537, 458772, 1, 65537, 458773, 1, 65538, 524300, 1, 65536, 524301, 1, 65537, 524302, 1, 65537, 524303, 1, 65537, 524304, 1, 65537, 524305, 1, 65537, 524306, 1, 65537, 524307, 1, 65537, 524308, 1, 65537, 524309, 1, 65538, 589836, 1, 65536, 589837, 1, 65537, 589838, 1, 65537, 589839, 1, 65537, 589840, 1, 65537, 589841, 1, 65537, 589842, 1, 65537, 589843, 1, 65537, 589844, 1, 65537, 589845, 1, 65538, 655372, 1, 65536, 655373, 1, 65537, 655374, 1, 65537, 655375, 1, 65537, 655376, 1, 65537, 655377, 1, 65537, 655378, 1, 65537, 655379, 1, 65537, 655380, 1, 65537, 655381, 1, 65538, 720908, 1, 65536, 720909, 1, 65537, 720910, 1, 65537, 720911, 1, 65537, 720912, 1, 65537, 720913, 1, 65537, 720914, 1, 65537, 720915, 1, 65537, 720916, 1, 65537, 720917, 1, 65538, 786444, 1, 131072, 786445, 1, 131073, 786446, 1, 131073, 786447, 1, 131073, 786448, 1, 131073, 786449, 1, 131073, 786450, 1, 131073, 786451, 1, 131073, 786452, 1, 131073, 786453, 1, 131074 )
__meta__ = {
"_edit_lock_": true
}

[node name="PillarOfIce" parent="." instance=ExtResource( 3 )]

[node name="Target" parent="." instance=ExtResource( 4 )]
position = Vector2( 903.341, 326.127 )

[node name="UserInterface" parent="." instance=ExtResource( 5 )]

[node name="PauseAndEndLevelScene" parent="UserInterface" instance=ExtResource( 6 )]
visible = false

[node name="Path" type="Label" parent="UserInterface"]
margin_left = 2.0
margin_top = 110.0
margin_right = 686.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "haha"

[node name="Player" parent="." instance=ExtResource( 8 )]
position = Vector2( 1014.42, 423.699 )

[node name="Fish" parent="." instance=ExtResource( 9 )]
position = Vector2( 1225.47, 431.099 )

[node name="Fish2" parent="." instance=ExtResource( 9 )]
position = Vector2( 1303.85, 728.045 )
[connection signal="ready" from="." to="." method="_on_Node2D_ready"]
[connection signal="body_entered" from="Target" to="." method="_on_Target_body_entered"]
[connection signal="onPausePressed" from="UserInterface" to="." method="_on_UserInterface_onPausePressed"]
[connection signal="onZoomToggled" from="UserInterface" to="." method="_on_UserInterface_onZoomToggled"]
[connection signal="onNextGamePressed" from="UserInterface/PauseAndEndLevelScene" to="." method="_on_PauseAndEndLevelScene_onNextGamePressed"]
[connection signal="onRestartPressed" from="UserInterface/PauseAndEndLevelScene" to="." method="_on_PauseAndEndLevelScene_onRestartPressed"]
[connection signal="onResumePressed" from="UserInterface/PauseAndEndLevelScene" to="." method="_on_PauseAndEndLevelScene_onResumePressed"]
[connection signal="onTitleScreenPressed" from="UserInterface/PauseAndEndLevelScene" to="." method="_on_PauseAndEndLevelScene_onTitleScreenPressed"]
[connection signal="onFishCollected" from="Fish" to="." method="_on_Fish_onFishCollected"]
[connection signal="onFishCollected" from="Fish2" to="." method="_on_Fish_onFishCollected"]
